# aiw10

./: Dockerfile  Pipfile  README.md  bootstrap.sh  pyproject.toml
api/: env.py  index.py
app/api/: aibot.py  env.py  index.py
app/services/: autocode.py  beautify.py  coprogram.py  review.py  upload.py
app/tools/: filetools.py  gittools.py  pineconetools.py
app/utils/: agentutils.py  commonutils.py  constants.py  githubutils.py  openaiutils.py  pineconeutils.py  promptutils.py
services/: autocode.py  beautify.py  review.py  upload.py
tools/: filetools.py
utils/: githubutils.py  pineconeutils.py  utils.py
