[tool.poetry]
name = "aiw10"
version = "0.1.0"
description = ""
authors = ["Linh Bui <linh.bui@aurea.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "3.12.4"
langchain-openai = "^0.1.14"
langchain-core = "^0.2.11"
python-dotenv = "^1.0.1"
langchain_experimental = "^0.0.62"
langgraph = "^0.1.5"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
langchain-pinecone = "^0.1.1"
langchain-text-splitters = "^0.2.2"
langsmith = "^0.1.83"
PyGithub = "^2.3.0"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"